--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^14.2.0",
     "axios": "^1.6.8",
     "crypto-js": "^4.2.0",
+    "primeng": "^17.17.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
